k8s-cluster-configuration/applications/baldcheck/base/database/service.yml
apiVersion: v1
kind: Service
metadata:
  name: baldcheck-db
  namespace: baldcheck
spec:
  selector:
    app: baldcheck-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None
