k8s-cluster-configuration/applications/baldcheck/base/database/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-allow-app-only
  namespace: baldcheck
spec:
  podSelector:
    matchLabels:
      app: baldcheck-db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: baldcheck
      ports:
        - port: 5432
